# game-site

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  devenv.nix  render.yaml
backend/: .golangci.yml  Dockerfile  devenv.nix  dockerfile  go.mod  go.sum  pyproject.toml
backend/games_backend/: ai_base.py  constants.py  game_base.py  main.py  managers.py  models.py  utils.py
backend/games_backend/games/: __init__.py  tictactoe.py  ultimate.py  utils.py
backend/games_backend/games/quantum/: game.py  logic.py  models.py  solver.py
backend/games_backend/games/topological_connect_four/: board.py  game.py  geometry.py  gravity.py  logic.py  models.py
backend/games_backend/games/wizard/: game.py  logic.py  models.py
backend/games_backend/manager/: README.md  ai_manager.py  bd_manager.py  book_manager.py  db_manager.py  game_manager.py  session_manager.py
backend/internal/app/: game_session.go  registry.go
backend/internal/constants/: names.go
backend/internal/domain/: game.go  message.go  player_mapping.go  user_service.go
backend/internal/infra/api/: auth_handler.go  rest.go  server.go  (+1 more)
backend/protocol/: auth.go  common.go  tictactoe.go  ultimate.go
backend/render_backend/: game_base.py  main.py  managers.py  models.py  utils.py
backend/render_backend/games/: __init__.py  pingpong.py  tictactoe.py  ultimate.py
backend/render_backend/ultimate/: api_functions.py  constants.py  game_state.py  ultimate_models.py
backend/tests/render_backend/: test_api_functions.py  test_game_state.py  test_managers.py  test_utils.py
(+257 files in other folders)
